tests/e2e/keywords/as_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    as = 1
      ^^

E0020: `as` is a reserved keyword
